--- a/demo/test.html
+++ b/demo/test.html
@@ -1,5 +1,5 @@
 <html>
-
+<title>ImageMagick.js Demo</title>
 <script src="../toolbox-base/interface.js"></script>
 
 <script>
@@ -18,23 +18,24 @@
   convert.addUrl('demo/test-expected-rotated.png', '/');
 
   convert.allDone().then(function() {
-    convert.run('-rotate', '90', '/test.png', '/test-actual-rotated-90.jpg').then(function() {
-      convert.getFile('test-actual-rotated-90.jpg').then(function(real_contents) {
+    convert.run('-rotate', '90', "-strip", '/test.png', '/test-actual-rotated-90.png').then(function() {
+      convert.getFile('test-actual-rotated-90.png').then(function(real_contents) {
         convert.getFile('test-expected-rotated.png').then(function(expected_contents) {
           console.log(real_contents === expected_contents);
-          if(real_contents !== expected_contents) {
-            var body = document.getElementsByTagName("body")[0];
+          
+          var body = document.getElementsByTagName("body")[0];
 
-            var img_received = document.createElement("img");
-            img_received.id = "received";
-            img_received.src = "data:image/jpeg;base64,"+window.btoa(real_contents);
+          body.appendChild(document.createTextNode("It " + (real_contents !== expected_contents ? "DIDN'T work!" : " worked!")));
 
-            var img_expected = document.createElement("img");
-            img_expected.src = "data:image/png;base64,"+window.btoa(expected_contents);
+          var img_received = document.createElement("img");
+          img_received.id = "received";
+          img_received.src = "data:image/png;base64,"+window.btoa(real_contents);
 
-            body.appendChild(img_received);
-            body.appendChild(img_expected);
-          }
+          var img_expected = document.createElement("img");
+          img_expected.src = "data:image/png;base64,"+window.btoa(expected_contents);
+
+          body.appendChild(img_received);
+          body.appendChild(img_expected);
         });
       });
     });
